fixed social alignment by inlining css

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -1288,10 +1288,3 @@ footer {
     visibility: collapse !important;
     display: none !important;
 }
-
-.social-div
-{
-    margin: 0px !important;
-    padding: 0px !important;
-    text-align: center !important;
-}
